log.html: fix overflowing tables

--- a/src/robot/webcontent/log.css
+++ b/src/robot/webcontent/log.css
@@ -26,7 +26,7 @@ table.test {
     padding: 0.2em;
 }
 table.metadata, table.keyword, table.messages {
-    margin-left: 1.1em;
+    padding-left: 1.1em;
     width: 100%;
 }
 table.metadata, table.messages {
